# introdjango

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yml
aula1808/: apps.py  urls.py  views.py
aula1808/templates/aula1808/: base.html  index.html
formsexemplo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
formsexemplo/migrations/: 0001_initial.py  0002_time_jogador_time.py  0003_doenca_historicomedico.py  0004_jogador_foto.py  0005_jogador_pontos_na_temporada.py  0006_time_fundacao.py  0007_contrato.py  0008_remove_jogador_time_alter_contrato_jogador.py  0009_time_plantel.py  0010_contrato_uuid.py
formsexemplo/templates/formsexemplo/: index.html  times.html
mysite/: settings.py  urls.py  views.py  wsgi.py
mysite/templates/: base.html  index.html
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_rename_opcoes_opcao.py  0003_alter_opcao_questao.py
polls/templates/polls/: index.html  questao.html
variaveisderota/: apps.py  urls.py  views.py
